--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Website</title>
+    <title>Welcome to My Website!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,7 +18,14 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hello! I'm [Your Name], and I'm passionate about [your hobby, academic interest, etc.]. This website is dedicated to sharing more about [your passion]. I've always been interested in [expand on the topic]. Here you will find a collection of resources, images, and ideas that I find inspiring. I hope you enjoy it!</p>
+        <p>Hello! I'm D'Lani Sweeney, and I'm passionate about doing my own nails! This website is dedicated to sharing more about doing your own gel-x nails at home. 
+            I started being interested in doing my own nails since my freshman year of college. 
+            I moved away from home and my usual nail spot and realized that when you add it up it costs a lot of money to regularly get your nails done at a salon. 
+            So I found some starter videos on TikTok on how to start yourself and all the basic tools you need and ordered them all easily on Amazon. 
+            Since then I’ve just been practicing and getting better and I have even done family and friends nails too. 
+            Since I’ve started I’ve been doing my own nails for 4 years now and I have really improved since then and it is my favorite hobby. 
+            When I do my nails it gives me some nice peaceful me-time and stimulates my brain by being able to use my artistic abilities to draw and create designs on my nails. 
+            Here you will find a collection of images of some of my favorite nail designs that I have created. I hope you enjoy it!</p>
         <img src="your-image.jpg" alt="Your Image" style="width: 300px;">
     </section>
 </body>
