--- a/about.html
+++ b/about.html
@@ -33,5 +33,15 @@
         </ul>
         <img src="another-image.jpg" alt="More about me" style="width: 300px;">
     </section>
+
+    <section>
+        <h3>Contact Me</h3>
+        <p>If you'd like to get in touch, you can reach me via email: <a href="mailto:sweeney.dl@northeastern.edu">sweeney.dl@northeastern.edu</a>.</p>
+        <p>Or follow me on social media:</p>
+        <ul>
+            <li><a href="https://instagram/dlanisweeney" target="_blank">Instagram</a></li>
+            <li><a href="https://linkedin.com/in/d-lani-sweeney" target="_blank">LinkedIn</a></li>
+        </ul>
+    </section>
 </body>
 </html>
