--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <p>Or follow me on social media:</p>
         <ul>
             <li><a href="https://instagram/dlanisweeney" target="_blank">Instagram</a></li>
-            <li><a href="www.linkedin.com/in/d-lani-sweeney-60333069" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/d-lani-sweeney-60333069/" target="_blank">LinkedIn</a></li>
         </ul>
     </section>
 </body>
