--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <p>If you'd like to get in touch, you can reach me via email: <a href="mailto:sweeney.dl@northeastern.edu">sweeney.dl@northeastern.edu</a>.</p>
         <p>Or follow me on social media:</p>
         <ul>
-            <li><a href="https://instagram/dlanisweeney" target="_blank">Instagram</a></li>
+            <li><a href="https://www.instagram.com/dlanisweeney/" target="_blank">Instagram</a></li>
             <li><a href="https://www.linkedin.com/in/d-lani-sweeney-60333069/" target="_blank">LinkedIn</a></li>
         </ul>
     </section>
