--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <p>When I do my nails, it gives me some nice peaceful me-time and stimulates my brain by allowing me to use my artistic abilities to draw and create designs on my nails. Here you will find a collection of images of some of my favorite nail designs that I have created. I hope you enjoy it!</p>
         
-        <img src="your-image.jpg" alt="Me doing gel-x nails" style="width: 300px;">
+        <img src="IMG_1641.JPG" alt="Me!" style="width: 300px;">
     </section>
 </body>
 </html>
