--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <li>Gel-X is a lot healtheir and doesnt destroy your nail beds</li>
             <li>Anyone can start and can easily get starter kits online at Amazon!</li>
         </ul>
-        <img src="IMG_7008.HEIC" alt="" style="width: 300px;">
+        <img src="IMG_7008.HEIC" alt="Nails" style="width: 300px;">
         <img src="IMG_2669.HEIC" alt="Nails" style="width: 300px;">
         <img src="IMG_1392.PNG" alt="Nails" style="width: 300px;">
         <img src="IMG_1390.PNG" alt="Nails" style="width: 300px;">
