--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
             <li>Gel-X is a lot healtheir and doesnt destroy your nail beds</li>
             <li>Anyone can start and can easily get starter kits online at Amazon!</li>
         </ul>
-        <img src="IMG_1.PNG" alt="Nails" style="width: 300px;">
-        <img src="IMG_2.PNG" alt="Nails" style="width: 300px;">
+        <img src="IMG_1.png" alt="Nails" style="width: 300px;">
+        <img src="IMG_2.png" alt="Nails" style="width: 300px;">
         <img src="IMG_1392.PNG" alt="Nails" style="width: 300px;">
         <img src="IMG_1390.PNG" alt="Nails" style="width: 300px;">
         <img src="IMG_1189.JPG" alt="Nails" style="width: 300px;">
-        <img src="IMG_3.PNG" alt="Nails" style="width: 300px;">
+        <img src="IMG_3.png" alt="Nails" style="width: 300px;">
     </section>
 
     <section>
