--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
             <li>Gel-X is a lot healtheir and doesnt destroy your nail beds</li>
             <li>Anyone can start and can easily get starter kits online at Amazon!</li>
         </ul>
-        <img src="IMG_1392.PNG" alt="Nails" style="width: 300px;">
-        <img src="IMG_1390.PNG" alt="Nails" style="width: 300px;">
-        <img src="IMG_1189.JPG" alt="Nails" style="width: 300px;">
+        <img src="IMG_1392.PNG" style="width: 300px;">
+        <img src="IMG_1390.PNG" style="width: 300px;">
+        <img src="IMG_1189.JPG" style="width: 300px;">
     </section>
 
     <section>
